crates/ty_python_semantic/resources/mdtest/snapshots/protocols.md_-_Protocols_-_Narrowing_of_protoco…_(98257e7c2300373).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: protocols.md - Protocols - Narrowing of protocols
mdtest path: crates/ty_python_semantic/resources/mdtest/protocols.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import Protocol
 2 | 
 3 | class HasX(Protocol):
 4 |     x: int
 5 | 
 6 | def f(arg: object, arg2: type):
 7 |     if isinstance(arg, HasX):  # error: [isinstance-against-protocol]
 8 |         reveal_type(arg)  # revealed: HasX
 9 |     else:
10 |         reveal_type(arg)  # revealed: ~HasX
11 | 
12 |     if issubclass(arg2, HasX):  # error: [isinstance-against-protocol]
13 |         reveal_type(arg2)  # revealed: type[HasX]
14 |     else:
15 |         reveal_type(arg2)  # revealed: type & ~type[HasX]
16 | from typing import runtime_checkable
17 | 
18 | @runtime_checkable
19 | class RuntimeCheckableHasX(Protocol):
20 |     x: int
21 | 
22 | def f(arg: object):
23 |     if isinstance(arg, RuntimeCheckableHasX):  # no error!
24 |         reveal_type(arg)  # revealed: RuntimeCheckableHasX
25 |     else:
26 |         reveal_type(arg)  # revealed: ~RuntimeCheckableHasX
27 | @runtime_checkable
28 | class OnlyMethodMembers(Protocol):
29 |     def method(self) -> None: ...
30 | 
31 | @runtime_checkable
32 | class OnlyClassmethodMembers(Protocol):
33 |     @classmethod
34 |     def method(cls) -> None: ...
35 | 
36 | @runtime_checkable
37 | class MultipleNonMethodMembers(Protocol):
38 |     b: int
39 |     a: int
40 | 
41 | def f(arg1: type):
42 |     # error: [isinstance-against-protocol] "`RuntimeCheckableHasX` cannot be used as the second argument to `issubclass` as it is a protocol with non-method members"
43 |     if issubclass(arg1, RuntimeCheckableHasX):
44 |         reveal_type(arg1)  # revealed: type[RuntimeCheckableHasX]
45 |     else:
46 |         reveal_type(arg1)  # revealed: type & ~type[RuntimeCheckableHasX]
47 | 
48 |     if issubclass(arg1, MultipleNonMethodMembers):  # error: [isinstance-against-protocol]
49 |         reveal_type(arg1)  # revealed: type[MultipleNonMethodMembers]
50 |     else:
51 |         reveal_type(arg1)  # revealed: type & ~type[MultipleNonMethodMembers]
52 | 
53 |     if issubclass(arg1, OnlyMethodMembers):  # no error!
54 |         reveal_type(arg1)  # revealed: type[OnlyMethodMembers]
55 |     else:
56 |         reveal_type(arg1)  # revealed: type & ~type[OnlyMethodMembers]
57 | 
58 |     if issubclass(arg1, OnlyClassmethodMembers):  # no error!
59 |         reveal_type(arg1)  # revealed: type[OnlyClassmethodMembers]
60 |     else:
61 |         reveal_type(arg1)  # revealed: type & ~type[OnlyClassmethodMembers]
```

# Diagnostics

```
error[isinstance-against-protocol]: Class `HasX` cannot be used as the second argument to `isinstance`
 --> src/mdtest_snippet.py:7:8
  |
6 | def f(arg: object, arg2: type):
7 |     if isinstance(arg, HasX):  # error: [isinstance-against-protocol]
  |        ^^^^^^^^^^^^^^^^^^^^^ This call will raise `TypeError` at runtime
8 |         reveal_type(arg)  # revealed: HasX
9 |     else:
  |
info: `HasX` is declared as a protocol class, but it is not declared as runtime-checkable
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import Protocol
2 |
3 | class HasX(Protocol):
  |       ^^^^^^^^^^^^^^ `HasX` declared here
4 |     x: int
  |
info: A protocol class can only be used in `isinstance` checks if it is decorated with `@typing.runtime_checkable` or `@typing_extensions.runtime_checkable`
info: See https://docs.python.org/3/library/typing.html#typing.runtime_checkable
info: rule `isinstance-against-protocol` is enabled by default

```

```
error[isinstance-against-protocol]: Class `HasX` cannot be used as the second argument to `issubclass`
  --> src/mdtest_snippet.py:12:8
   |
10 |         reveal_type(arg)  # revealed: ~HasX
11 |
12 |     if issubclass(arg2, HasX):  # error: [isinstance-against-protocol]
   |        ^^^^^^^^^^^^^^^^^^^^^^ This call will raise `TypeError` at runtime
13 |         reveal_type(arg2)  # revealed: type[HasX]
14 |     else:
   |
info: `HasX` is declared as a protocol class, but it is not declared as runtime-checkable
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import Protocol
2 |
3 | class HasX(Protocol):
  |       ^^^^^^^^^^^^^^ `HasX` declared here
4 |     x: int
  |
info: A protocol class can only be used in `issubclass` checks if it is decorated with `@typing.runtime_checkable` or `@typing_extensions.runtime_checkable`
info: See https://docs.python.org/3/library/typing.html#typing.runtime_checkable
info: rule `isinstance-against-protocol` is enabled by default

```

```
error[isinstance-against-protocol]: Class `RuntimeCheckableHasX` cannot be used as the second argument to `issubclass`
  --> src/mdtest_snippet.py:43:8
   |
41 | def f(arg1: type):
42 |     # error: [isinstance-against-protocol] "`RuntimeCheckableHasX` cannot be used as the second argument to `issubclass` as it is a pr…
43 |     if issubclass(arg1, RuntimeCheckableHasX):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This call will raise `TypeError` at runtime
44 |         reveal_type(arg1)  # revealed: type[RuntimeCheckableHasX]
45 |     else:
   |
info: A protocol class cannot be used in `issubclass` checks if it has non-method members
  --> src/mdtest_snippet.py:20:5
   |
18 | @runtime_checkable
19 | class RuntimeCheckableHasX(Protocol):
20 |     x: int
   |     ^ Non-method member `x` declared here
21 |
22 | def f(arg: object):
   |
info: rule `isinstance-against-protocol` is enabled by default

```

```
error[isinstance-against-protocol]: Class `MultipleNonMethodMembers` cannot be used as the second argument to `issubclass`
  --> src/mdtest_snippet.py:48:8
   |
46 |         reveal_type(arg1)  # revealed: type & ~type[RuntimeCheckableHasX]
47 |
48 |     if issubclass(arg1, MultipleNonMethodMembers):  # error: [isinstance-against-protocol]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This call will raise `TypeError` at runtime
49 |         reveal_type(arg1)  # revealed: type[MultipleNonMethodMembers]
50 |     else:
   |
info: A protocol class cannot be used in `issubclass` checks if it has non-method members
info: `MultipleNonMethodMembers` has non-method members `a` and `b`
  --> src/mdtest_snippet.py:39:5
   |
37 | class MultipleNonMethodMembers(Protocol):
38 |     b: int
39 |     a: int
   |     ^ Non-method member `a` declared here
40 |
41 | def f(arg1: type):
   |
info: rule `isinstance-against-protocol` is enabled by default

```
